spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
-    background-color: rgb(76, 155, 143);
+  text-shadow: 2px 0 #fff, -2px 0 #fff, 0 2px #fff, 0 -2px #fff,
+             1px 1px #fff, -1px -1px #fff, 1px -1px #fff, -1px 1px #fff;
 	/* Use a system font, if none are available use an available sans-sarif   font */
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
 		Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
@@ -16,13 +17,12 @@ section.board {
   display: grid;
   grid-template-rows: repeat(3, 10vmin);
   grid-template-columns: repeat(3, 10vmin);
-  grid-gap: 5vmin;
+  grid-gap: 2vmin;
   margin: 0 auto;
   padding: 10px;
 }
 
 div {
-  color: aliceblue;
   border: 2px solid black;
   border-radius: 12px;
   font-size: 8vmin;
